--- a/package.json
+++ b/package.json
@@ -84,7 +84,8 @@
   },
   "devDependencies": {
     "less": "^4.2.0",
-    "less-loader": "^12.2.0"
+    "less-loader": "^12.2.0",
+    "prettier": "^3.3.2"
   },
   "jest": {
     "roots": [
